--- a/pom.xml
+++ b/pom.xml
@@ -24,13 +24,15 @@
     </modules>
 
     <properties>
+        <dubbo.version>2.7.3</dubbo.version>
+        <demo.version>1.0.0-SNAPSHOT</demo.version>
+        <spring.boot.version>2.1.8.RELEASE</spring.boot.version>
+        <slf4j.version>1.7.28</slf4j.version>
+
         <java.version>1.8</java.version>
         <java.source.version>1.8</java.source.version>
         <java.target.version>1.8</java.target.version>
         <file.encoding>UTF-8</file.encoding>
-        <dubbo.version>2.7.3</dubbo.version>
-        <demo.version>1.0.0-SNAPSHOT</demo.version>
-        <spring.boot.version>2.1.8.RELEASE</spring.boot.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -45,6 +47,11 @@
                 <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo-spring-boot-starter</artifactId>
                 <version>${dubbo.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>log4j-over-slf4j</artifactId>
+                <version>${slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
