--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <dubbo.version>2.7.3</dubbo.version>
         <demo.version>1.0.0-SNAPSHOT</demo.version>
         <spring.boot.version>2.1.8.RELEASE</spring.boot.version>
+        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
         <slf4j.version>1.7.28</slf4j.version>
 
         <java.version>1.8</java.version>
@@ -90,6 +91,15 @@
                             </goals>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven.compiler.plugin.version}</version>
+                    <configuration>
+                        <source>8</source>
+                        <target>8</target>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
